# ai_gym_rat

./: Dockerfile  client_view.htm  docker-compose.yml  pyproject.toml
ai_gym_rat/: main.py
ai_gym_rat/agents/: workout_agent_executor.py
ai_gym_rat/clients/: wger_client.py
ai_gym_rat/core/: config.py  llm_setup.py  prompts.py
ai_gym_rat/services/: workout_service.py
ai_gym_rat/tools/: exercise_refinement_tool.py  input_parser_tool.py  wger_models.py  wger_tools.py
core/: config.py  llm_setup.py
