[tool.poetry.scripts]
ai_gym_rat = "ai_gym_rat.main:app"

[tool.poetry.group.dev.dependencies]
rich = "^14.0.0"

[tool.poetry]
name = "ai-gym-rat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ai_gym_rat" }]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langchain-openai = "^0.3.17"
python-dotenv = "^1.1.0"
langchain-core = "^0.3.60"
httpx = "^0.28.1"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
better-exceptions = "^0.3.3"
orjson = "^3.10.18"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
